--- a/index.html
+++ b/index.html
@@ -167,4 +167,10 @@ document.addEventListener('keydown', function(e) {
 requestAnimationFrame(loop);
 </script>
 </body>
+
+<video width="640" height="360" controls>
+  <source src="snake game video.mp4" type="video/mp4">
+
+</video>
+
 </html>
